# ReconCTRL

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8a1069024e7c_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  scan.py  user.py
backend/app/routers/: auth.py  health.py  scans.py
backend/app/schemas/: __init__.py  auth.py  scan.py
backend/app/services/: auth_service.py  scan_service.py
backend/app/worker/: __init__.py  celery_app.py  db.py  events.py  module_runners.py  tasks.py  utils.py
backend/app/worker/data/: dir_wordlist.txt
backend/app/worker/modules/: __init__.py  ai_summary.py  port_scan.py  subdomain.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AIReport.jsx  ExportButton.jsx  ModuleCard.jsx  OWASPMatrix.jsx  PortTable.jsx  ProgressBar.jsx  ProtectedRoute.jsx  ScanInput.jsx  SubdomainTree.jsx
frontend/src/components/layout/: Layout.jsx
frontend/src/constants/: modules.js
frontend/src/hooks/: useAuth.js  useSSE.js  useScan.js
frontend/src/pages/: DashboardPage.jsx  HistoryPage.jsx  LoginPage.jsx  ReportPage.jsx  ScanPage.jsx
frontend/src/store/: authStore.js
frontend/src/utils/: scan.js
worker/: README.md  tasks.py
