[tool.poetry]
name = "reconctrl-backend"
version = "0.1.0"
description = "FastAPI Backend for ReconCTRL"
authors = ["Admin <admin@reconctrl.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.7.2"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
python-nmap = "^0.7.1"
python-whois = "^0.8.0"
dnspython = "^2.6.0"
anthropic = "^0.40.0"
sse-starlette = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
